platform/manifests/gatekeeper-baseline.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredrunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredrunasnonroot
        violation[{"msg": msg}] {
          input.review.object.kind == "Pod"
          not input.review.object.spec.securityContext.runAsNonRoot
          msg := "Pod should set spec.securityContext.runAsNonRoot=true"
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRunAsNonRoot
metadata:
  name: audit-run-as-non-root
spec:
  enforcementAction: dryrun
  match:
    namespaces: ["sre-system", "demo"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
